--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-dom": "^16.6.3",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.1",
+    "react-search": "^2.0.5"
   },
   "babel": {
     "presets": [
